<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="@dimen/dp_15">

    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/sp_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/app_name" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivWeatherIcon"
        android:layout_width="@dimen/dp_80"
        android:layout_height="@dimen/dp_80"
        android:layout_marginTop="@dimen/dp_25"
        tools:src="@tools:sample/avatars"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLocation" />

    <TextView
        android:id="@+id/tvCurrentTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:gravity="center"
        android:textSize="@dimen/sp_50"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivWeatherIcon"
        tools:text="50ºF" />

    <TextView
        android:id="@+id/tvRealFeelTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCurrentTemperature"
        tools:text="Real Feel: 52ºF" />

    <TextView
        android:id="@+id/tvDirectionWindLabel"
        android:layout_width="@dimen/dp_150"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_25"
        android:text="@string/direction_wind"
        android:textStyle="bold"
        android:textSize="@dimen/sp_14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRealFeelTemperature" />

    <TextView
        android:id="@+id/tvDirectionWindValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_25"
        tools:text="180 S"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvDirectionWindLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvRealFeelTemperature" />

    <TextView
        android:id="@+id/tvSpeedWindLabel"
        android:layout_width="@dimen/dp_150"
        android:layout_height="wrap_content"
        android:text="@string/speed_wind"
        android:textSize="@dimen/sp_14"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDirectionWindLabel" />

    <TextView
        android:id="@+id/tvSpeedWindValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvDirectionWindLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvDirectionWindValue"
        tools:text="120 mi/s" />

    <TextView
        android:id="@+id/tvRelativeHumidityLabel"
        android:layout_width="@dimen/dp_150"
        android:layout_height="wrap_content"
        android:text="@string/relative_humidity"
        android:textSize="@dimen/sp_14"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSpeedWindLabel" />

    <TextView
        android:id="@+id/tvRelativeHumidityValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvDirectionWindLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvSpeedWindLabel"
        tools:text="80%" />

    <TextView
        android:id="@+id/tvPressureLabel"
        android:layout_width="@dimen/dp_150"
        android:layout_height="wrap_content"
        android:text="@string/pressure"
        android:textSize="@dimen/sp_14"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRelativeHumidityLabel" />

    <TextView
        android:id="@+id/tvPressureValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvDirectionWindLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvRelativeHumidityLabel"
        tools:text="80 mg Hg" />

    <TextView
        android:id="@+id/tvPrecipitationSummaryLabel"
        android:layout_width="@dimen/dp_150"
        android:layout_height="wrap_content"
        android:text="@string/precipitation_summary"
        android:textSize="@dimen/sp_14"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPressureLabel" />

    <TextView
        android:id="@+id/tvPrecipitationSummaryValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvDirectionWindLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvPressureLabel"
        tools:text="100 mmm" />

</androidx.constraintlayout.widget.ConstraintLayout>
